        echo '\t' | a.out
    The bug was caused by flexc++ using range numbers rather than offsets in
    dfarow/transitions.cc and dfarow/transit.cc (and related files)

  * Several inconsistencies in the manual were fixed.

  * The source file containing main() was renamed to main.cc (was: flexc++.cc);
    the internal header file for the main program was renamed to main.ih.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 05 Mar 2016 11:56:37 +0100

flexc++ (2.03.04)

  * Fixed a memory leak reported by gendx caused by the missing ScannerBase
    destructor.

  * 'build install' supports an optional LOG: argument: the (relative or
    absolute) path to a installation log file. The environment variable
    FLEXCPP is no longer used.

  * Updated the usage info displayed by `./build', altered the procedure to
    install the files at their final destinations.

  * Icmake files adapted to icmake 8.00.04

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 14 Dec 2015 15:37:58 +0100

flexc++ (2.03.03)

  * Kevin Brodsky observed that the installation scripts used 'chdir' rather
    than 'cd'. Fixed in this release.

  * Kevin Brodsky also observed that the combined size of all precompiled 
    headers might exceed some disks capacities. The option -P was added to the
    ./build script to prevent the use of precompiled headers.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 05 Oct 2015 20:24:26 +0200

flexc++ (2.03.02)

  * Reimplemented the (un)installation procedures

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 02 Oct 2015 11:03:20 +0200

flexc++ (2.03.01)

  * 'build manual' creates the manual when its called. If the manual already
    exists, it is recreated. Same holds true for 'build man'

  * Flexc++'s compilation now uses precompiled headers

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 28 Sep 2015 18:48:43 +0200

flexc++ (2.03.00)

  * Fixed a bug in handling {0, x} intervals: encountered by Guillaume
    Endignoux. 
